--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>demo-agent</module>
         <module>one-java-agent-plugin</module>
         <module>demo-plugin</module>
+        <module>dubbo-test-plugin</module>
         <module>one-java-agent</module>
     </modules>
 
@@ -51,32 +52,22 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <maven.compiler.source>1.6</maven.compiler.source>
         <oneagent.deps.package>com.alibaba.oneagent.deps</oneagent.deps.package>
-        <asm.version>8.0.1</asm.version>
+        <bytekit.version>0.0.2</bytekit.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.ow2.asm</groupId>
-                <artifactId>asm</artifactId>
-                <version>${asm.version}</version>
+                <groupId>com.alibaba</groupId>
+                <artifactId>bytekit-instrument-api</artifactId>
+                <version>${bytekit.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.ow2.asm</groupId>
-                <artifactId>asm-commons</artifactId>
-                <version>${asm.version}</version>
+                <groupId>com.alibaba</groupId>
+                <artifactId>bytekit-core</artifactId>
+                <version>${bytekit.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.ow2.asm</groupId>
-                <artifactId>asm-util</artifactId>
-                <version>${asm.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.ow2.asm</groupId>
-                <artifactId>asm-analysis</artifactId>
-                <version>${asm.version}</version>
-            </dependency>
-
+        
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
