--- a/dubbo-test-plugin/src/main/plugin.properties
+++ b/dubbo-test-plugin/src/main/plugin.properties
@@ -1,5 +1,5 @@
 specification=1
-name=demo-plugin
+name=dubbo-test-plugin
 version=1.0.0
-classpath=demo-plugin.jar:lib/
-pluginActivator=com.activator.test.DemoActivator
+classpath=dubbo-test-plugin.jar:lib/
+pluginActivator=com.test.dubbo.DubboDemoActivator
