--- a/one-java-agent/pom.xml
+++ b/one-java-agent/pom.xml
@@ -25,6 +25,11 @@
             <groupId>com.alibaba</groupId>
             <artifactId>bytekit-core</artifactId>
         </dependency>
+<!--         <dependency>
+            <groupId>org.benf</groupId>
+            <artifactId>cfr</artifactId>
+            <version>0.150</version>
+        </dependency> -->
 
         <dependency>
             <groupId>org.slf4j</groupId>
