--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>demo-agent</module>
         <module>one-java-agent-plugin</module>
         <module>demo-plugin</module>
+        <module>dubbo-test-instrument</module>
         <module>dubbo-test-plugin</module>
         <module>one-java-agent</module>
     </modules>
