--- a/demo-agent/pom.xml
+++ b/demo-agent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -36,7 +37,8 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Premain-Class>com.test.DemoAgent</Premain-Class>
                                         <Agent-Class>com.test.DemoAgent</Agent-Class>
@@ -53,7 +55,7 @@
                             <shadeSourcesContent>true</shadeSourcesContent>
                             <artifactSet>
                             </artifactSet>
-                            
+
                         </configuration>
                     </execution>
                 </executions>
@@ -78,9 +80,42 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
 
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <delete
+                                            dir="${user.home}/oneagent/plugins/${pom.artifactId}@${pom.version}">
+                                        </delete>
+                                        <copy todir="${user.home}/oneagent/plugins/${pom.artifactId}@${pom.version}">
+                                            <fileset
+                                                dir="${project.build.directory}/${pom.artifactId}@${pom.version}" />
+                                        </copy>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
