--- a/dubbo-test-instrument/src/main/resources/instrument.properties
+++ b/dubbo-test-instrument/src/main/resources/instrument.properties
@@ -1,1 +1,1 @@
-instrument=org.apache.dubbo.monitor.support.MonitorFilter
+instrument=org.apache.dubbo.monitor.support.MonitorFilter,org.apache.dubbo.rpc.test.Invoker
