--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,16 +1,43 @@
-name: Java CI
+name: JavaCI
 
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [7, 8, 9, 10, 11 ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup java
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }} 
+      - name: Build with Maven
+        run: mvn clean package
 
+  build_jdk_ge_12:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [12, 13, 14 ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 8
+      - name: save java8 home
+        run: |
+          export JAVA8_HOME=$JAVA_HOME && echo $JAVA8_HOME
+          echo "export JAVA8_HOME=$JAVA_HOME" > ~/.testenv
+
+      - name: Setup java
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
       - name: Build with Maven
-        run: mvn package -DskipTests && mvn test
+        run: |
+          source ~/.testenv
+          mvn -Dmaven.compiler.fork=true -Dmaven.compiler.executable=$JAVA8_HOME/bin/javac clean package
