--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <maven.compiler.source>1.6</maven.compiler.source>
         <oneagent.deps.package>com.alibaba.oneagent.deps</oneagent.deps.package>
-        <bytekit.version>0.0.2</bytekit.version>
+        <bytekit.version>0.0.4-SNAPSHOT</bytekit.version>
     </properties>
 
     <dependencyManagement>
