--- a/one-java-agent/pom.xml
+++ b/one-java-agent/pom.xml
@@ -87,8 +87,8 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Premain-Class>com.alibaba.oneagent.OneAgent</Premain-Class>
-                                        <Agent-Class>com.alibaba.oneagent.OneAgent</Agent-Class>
+                                        <Premain-Class>com.alibaba.oneagent.BootstrapAgent</Premain-Class>
+                                        <Agent-Class>com.alibaba.oneagent.BootstrapAgent</Agent-Class>
                                         <Can-Redefine-Classes>true</Can-Redefine-Classes>
                                         <Can-Retransform-Classes>true</Can-Retransform-Classes>
                                         <Specification-Title>${project.name}</Specification-Title>
