--- a/demo-plugin/pom.xml
+++ b/demo-plugin/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.alibaba.oneagent</groupId>
         <artifactId>one-java-agent-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>demo-plugin</artifactId>
@@ -88,12 +86,10 @@
                                 </goals>
                                 <configuration>
                                     <tasks>
-                                        <delete
-                                            dir="${user.home}/oneagent/plugins/${pom.artifactId}@${pom.version}">
+                                        <delete dir="${user.home}/oneagent/plugins/${pom.artifactId}@${pom.version}">
                                         </delete>
                                         <copy todir="${user.home}/oneagent/plugins/${pom.artifactId}@${pom.version}">
-                                            <fileset
-                                                dir="${project.build.directory}/${pom.artifactId}@${pom.version}" />
+                                            <fileset dir="${project.build.directory}/${pom.artifactId}@${pom.version}" />
                                         </copy>
                                     </tasks>
                                 </configuration>
