--- a/one-java-agent/pom.xml
+++ b/one-java-agent/pom.xml
@@ -210,9 +210,9 @@
                                         <!-- for test -->
                                         <unzip src="${project.build.directory}/oneagent@${project.version}.zip" dest="${project.build.directory}/oneagent">
                                         </unzip>
-                                        <delete dir="${user.home}/oneagent/core/oneagent@${pom.version}">
+                                        <delete dir="${user.home}/oneagent/core/oneagent@${project.version}">
                                         </delete>
-                                        <unzip src="${project.build.directory}/oneagent@${project.version}.zip" dest="${user.home}/oneagent/core/oneagent@${pom.version}">
+                                        <unzip src="${project.build.directory}/oneagent@${project.version}.zip" dest="${user.home}/oneagent/core/oneagent@${project.version}">
                                         </unzip>
                                     </tasks>
                                 </configuration>
