--- a/bytekit-demo-plugin/pom.xml
+++ b/bytekit-demo-plugin/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.alibaba.oneagent</groupId>
@@ -7,7 +9,7 @@
         <version>0.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>demo-plugin</artifactId>
+    <artifactId>bytekit-demo-plugin</artifactId>
 
     <dependencies>
         <dependency>
@@ -19,34 +21,13 @@
         </dependency>
 
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.76</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>bytekit-core</artifactId>
-            <scope>provided</scope>
         </dependency>
+
     </dependencies>
     <build>
-        <finalName>demo-plugin</finalName>
+        <finalName>bytekit-demo-plugin</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -98,10 +79,13 @@
                                 </goals>
                                 <configuration>
                                     <tasks>
-                                        <delete dir="${user.home}/oneagent/plugins/${project.artifactId}@${project.version}">
+                                        <delete
+                                            dir="${user.home}/oneagent/plugins/${project.artifactId}@${project.version}">
                                         </delete>
-                                        <copy todir="${user.home}/oneagent/plugins/${project.artifactId}@${project.version}">
-                                            <fileset dir="${project.build.directory}/${project.artifactId}@${project.version}" />
+                                        <copy
+                                            todir="${user.home}/oneagent/plugins/${project.artifactId}@${project.version}">
+                                            <fileset
+                                                dir="${project.build.directory}/${project.artifactId}@${project.version}" />
                                         </copy>
                                     </tasks>
                                 </configuration>
