--- a/demo-plugin/src/main/plugin.properties
+++ b/demo-plugin/src/main/plugin.properties
@@ -3,3 +3,4 @@ name=demo-plugin
 version=1.0.0
 classpath=demo-plugin.jar:lib/
 pluginActivator=com.activator.test.DemoActivator
+importPackages=com.alibaba.fastjson,com.alibaba.bytekit
