--- a/dubbo-test-plugin-common/pom.xml
+++ b/dubbo-test-plugin-common/pom.xml
@@ -7,34 +7,26 @@
         <version>0.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>dubbo-test-instrument</artifactId>
+    <artifactId>dubbo-test-plugin-common</artifactId>
 
     <dependencies>
-        
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>bytekit-instrument-api</artifactId>
-            <optional>true</optional>
-            <scope>provided</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo</artifactId>
-            <version>2.7.8</version>
-            <optional>true</optional>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
+         <dependency>
             <groupId>com.alibaba.oneagent</groupId>
-            <artifactId>dubbo-test-plugin-common</artifactId>
+            <artifactId>one-java-agent-plugin</artifactId>
             <version>${project.version}</version>
             <optional>true</optional>
             <scope>provided</scope>
         </dependency>
+         <dependency>
+            <groupId>com.alibaba.oneagent</groupId>
+            <artifactId>one-java-agent</artifactId>
+            <version>${project.version}</version>
+            <optional>true</optional>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
     <build>
-        <finalName>dubbo-test-instrument</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -46,7 +38,7 @@
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
-
 </project>
