--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <maven.compiler.target>1.6</maven.compiler.target>
         <maven.compiler.source>1.6</maven.compiler.source>
         <oneagent.deps.package>com.alibaba.oneagent.deps</oneagent.deps.package>
-        <bytekit.version>0.0.5</bytekit.version>
+        <bytekit.version>0.0.8-SNAPSHOT</bytekit.version>
     </properties>
 
     <dependencyManagement>
