add opentelemetry-plugin trace-httpClient-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
         <module>dubbo-test-plugin-common</module>
         <module>dubbo-test-instrument</module>
         <module>dubbo-test-plugin</module>
+        <module>opentelemetry-plugin</module>
+        <module>trace-configuration</module>
+        <module>trace-httpClient-instrument</module>
+        <module>trace-httpClient-plugin</module>
         <module>one-java-agent</module>
     </modules>
 
