--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+*.versionsBackup
 
 ### STS ###
 .apt_generated
@@ -31,3 +32,4 @@ build/
 .vscode/
 
 *.DS_Store
+
