--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
                     <artifactId>maven-antrun-plugin</artifactId>
                     <version>1.8</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.10.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
