--- a/one-java-agent/pom.xml
+++ b/one-java-agent/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.alibaba.oneagent</groupId>
         <artifactId>one-java-agent-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>one-java-agent</artifactId>
