--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,33 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [7, 8, 9, 10, 11 ]
+        java: [7, 8, 11, 17 ]
     steps:
       - uses: actions/checkout@v2
-      - name: Setup java
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: ${{ matrix.java }} 
-      - name: Build with Maven
+          java-version: 11
+      - name: save java11 home
         run: |
-          mvn clean package -DskipTests
-          mvn test
-
-  build_jdk_ge_12:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        java: [12, 13, 14, 15]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 8
-      - name: save java8 home
-        run: |
-          export JAVA8_HOME=$JAVA_HOME && echo $JAVA8_HOME
-          echo "export JAVA8_HOME=$JAVA_HOME" > ~/.testenv
+          export JAVA11_HOME=$JAVA_HOME && echo $JAVA11_HOME
+          echo "export JAVA11_HOME=$JAVA_HOME" > ~/.testenv
 
       - name: Setup java
         uses: actions/setup-java@v1
@@ -42,5 +26,5 @@ jobs:
       - name: Build with Maven
         run: |
           source ~/.testenv 
-          mvn -Dmaven.compiler.fork=true -Dmaven.compiler.executable=$JAVA8_HOME/bin/javac clean package -DskipTests
-          mvn -Dmaven.compiler.fork=true -Dmaven.compiler.executable=$JAVA8_HOME/bin/javac test
+          mvn -Dmaven.compiler.fork=true -Dmaven.compiler.executable=$JAVA11_HOME/bin/javac clean package -DskipTests --batch-mode
+          mvn -Dmaven.compiler.fork=true -Dmaven.compiler.executable=$JAVA11_HOME/bin/javac test --batch-mode
