--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,9 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java }} 
+          distribution: 'zulu'
+          cache: 'maven'
       - name: Build with Maven
         run: |
           mvn clean package -DskipTests
@@ -27,18 +29,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 8
+          distribution: 'zulu'
+          cache: 'maven'
       - name: save java8 home
         run: |
           export JAVA8_HOME=$JAVA_HOME && echo $JAVA8_HOME
           echo "export JAVA8_HOME=$JAVA_HOME" > ~/.testenv
 
       - name: Setup java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java }}
+          distribution: 'zulu'
+          cache: 'maven'
       - name: Build with Maven
         run: |
           source ~/.testenv 
