--- a/opentelemetry-plugin/src/main/plugin.properties
+++ b/opentelemetry-plugin/src/main/plugin.properties
@@ -4,3 +4,4 @@ version=1.0.0
 classpath=opentelemetry-plugin.jar:lib/
 order=990
 pluginActivator=com.activator.opentelemetry.OpentelemetryActivator
+importPackages=io.grpc
