--- a/trace-httpClient-instrument/src/main/resources/instrument.properties
+++ b/trace-httpClient-instrument/src/main/resources/instrument.properties
@@ -1,2 +1,2 @@
-instrument=org.apache.http.impl.client.InternalHttpClient,org.apache.http.impl.client.MinimalHttpClient
+instrument=org.apache.http.impl.client.InternalHttpClient,org.apache.http.impl.client.MinimalHttpClient,org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory
 define=org.apache.http.impl.client.TraceTextMapSetter
