--- a/profiler-instrument/pom.xml
+++ b/profiler-instrument/pom.xml
@@ -7,7 +7,7 @@
         <version>0.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>trace-httpClient-instrument</artifactId>
+    <artifactId>profiler-instrument</artifactId>
 
     <properties>
         <java.version>1.6</java.version>
@@ -24,14 +24,6 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>bytekit-instrument-api</artifactId>
-            <optional>true</optional>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
             <optional>true</optional>
             <scope>provided</scope>
         </dependency>
@@ -58,7 +50,7 @@
 
     </dependencies>
     <build>
-        <finalName>trace-httpClient-instrument</finalName>
+        <finalName>profiler-instrument</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
